--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
@@ -19,8 +20,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "razorpay": "^2.8.4",
-    "sweetalert2": "^11.7.0",
-    "twilio": "^3.84.0",
+    "sweetalert2": "^11.4.8",
+    "twilio": "^4.8.0",
     "voucher-code-generator": "^1.3.0"
   }
 }
